@@ -15,21 +15,6 @@ Package=<4>
 
 ###############################################################################
 
-Project: "test_parser"=.\test_parser\test_parser.dsp - Package Owner=<4>
-
-Package=<5>
-{{{
-}}}
-
-Package=<4>
-{{{
-    Begin Project Dependency
-    Project_Dep_Name libwbxml2
-    End Project Dependency
-}}}
-
-###############################################################################
-
 Project: "wbxml2xml"=.\wbxml2xml\wbxml2xml.dsp - Package Owner=<4>
 
 Package=<5>
