@@ -1,3 +1,4 @@
+  * Removed outdated test/test_parser.c (ticket #82)
 2012-05-25  Michael Bell <michael.bell@web.de>
   * Released 0.11.1
   * Fixed performance problem during the generation of XML documents.
